[tool.poetry]
name = "aku"
version = "0.1.0"
description = "Bot multipropósito enfocado en ofrecer mini-juegos para la comunidad. Proyecto creado para Outlaw's Fortress."
authors = ["n-ull"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.0"
envsqare = {url = "https://gitlab.com/square-wheel-team/envsqare/-/archive/prerelease-0.0.4/envsqare-prerelease-0.0.4.tar.gz"}
requests = "^2.31.0"
pillow = "^9.5.0"
imagehash = "^4.3.1"
pymongo = "^4.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
#"__init__.py" = ["F401", "F403"]
#"bundle.py" = ["F401", ]
